# traceback

./: AGENTS.md  README.md  TODO  package-lock.json  package.json
.github/workflows/: ci.yml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  calendar.rs  db.rs  git.rs  lib.rs  main.rs  sync.rs  sync_events.rs
src/app/: app.tsx  calendar.tsx  events.tsx  log.tsx  projects.tsx  rules.tsx  settings.tsx
src/components/: brand-icons.tsx  calendar-utils.ts  calendar-view.tsx  color-picker.tsx  date-range-filter.tsx  event-block.tsx  event-content.tsx  event-details-dialog.tsx  event-details.tsx  event-tooltip-content.tsx  events-list.tsx  log-view.tsx  month-event-block.tsx  rule-edit-dialog.tsx  rule-form.tsx
src/components/ui/: dialog.tsx  drawer.tsx  sidebar.tsx  tooltip.tsx
src/contexts/: projects-context.tsx  rule-dialog-context.tsx
src/hooks/: sync-hooks.ts  use-calendar-scroll.ts  use-persisted-state.ts  useAutoSync.ts
src/types/: calendar.ts  event.ts  sync.ts
