[package]
name = "traceback"
version = "0.1.0"
description = "Traceback - Calendar events and activity tracking"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "traceback_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
tokio = { version = "1", features = ["sync"] }
md5 = "0.7"
git2 = "0.19"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSDate", "NSArray", "NSError"] }
objc2-event-kit = { version = "0.2", features = [
    "EKEventStore",
    "EKEvent",
    "EKCalendarItem",
    "EKCalendar",
    "EKObject",
    "EKParticipant",
    "EKTypes",
    "block2"
] }
chrono = { version = "0.4", features = ["serde"] }
block2 = "0.5"
dispatch = "0.2"

